--- a/journee_sans_chaussures.html
+++ b/journee_sans_chaussures.html
@@ -35,7 +35,7 @@
 						<a class="nav-link" href="#ils"><span class="pad2">Ils se sont déchaussés</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#presse"><span class="pad3">la presse en parle</span></a>
+						<a class="nav-link" href="#parle"><span class="pad3">la presse en parle</span></a>
 					</li>
 				</ul>
 			</div>
